netpol-basic/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: default
spec:
  podSelector: {} # Applies to all pods in the namespace
  policyTypes:
  - Ingress
